ola-parser/src/testdata/syntaxTests/emit/emit_empty.sol
contract C {
  fn f()  {
    emit;
  }
}
// ----
// ParserError 5620: (45-46): Expected event name or path.
